Compiler/src/main/java/Testing/Tests/SemanticTests/failing/DuplicateVariable.ru
start{
Char a;
Int a;}